@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-11T01:44:11Z",
-  "count_outdated" : 8385,
-  "uniques_outdated" : 3816,
+  "timestamp" : "2025-01-12T01:52:46Z",
+  "count_outdated" : 8386,
+  "uniques_outdated" : 3817,
   "count" : 8405,
   "uniques" : 3836,
   "clones" : [
-    {
-      "timestamp": "2024-12-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-30T00:00:00Z",
       "count": 4,
