@@ -1,12 +1,7 @@
 {
-  "count": 20,
-  "uniques": 17,
+  "count": 19,
+  "uniques": 16,
   "clones": [
-    {
-      "timestamp": "2024-12-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-12-30T00:00:00Z",
       "count": 4,
