@@ -1,3 +1,12 @@
+2025-01-12T01:52:46Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12729444992 # 766
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-12
+* notice: last 14d: unq all: 16 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 3816 8385 / 3836 8405
+* notice: next accum: outdated-unq outdated-all / unq all: 3817 8386 / 3836 8405
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-28] / []
+
 2025-01-11T01:44:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12720023350 # 764
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-11
